--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <table align="center">
         <tr>
           <td rowspan=2>
-            <label for="useColors">Color</label>
+            <label for="useColors">Color</label><br>
             <input type="checkbox" id="useColors">
           </td>
           <td>
@@ -64,6 +64,8 @@
           <td>
             <input type="range" max=20 id="minPow"><br>
           </td>
+        </tr>
+        <tr>
           <td>
             <label for="maxPow">Max</label>
           </td>
