--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <label for="minColors">Min</label>
           </td>
           <td>
-            <input type="range" max=5 id="minColors">
+            <input type="range" max=5 value=0 id="minColors">
           </td>
         </tr>
         <tr>
@@ -23,7 +23,7 @@
             <label for="maxColors">Max</label>
           </td>
           <td>
-            <input type="range" max=5 id="maxColors">
+            <input type="range" max=5 value=5 id="maxColors">
           </td>
         </tr>
         
