--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <form>
-      <table align="center">
+      <table align="center" top=200px>
         <tr>
           <td rowspan=2>
             <label for="useColors">Color</label><br>
