--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <label for="minTypes">Min</label>
           </td>
           <td>
-            <input type="range" max=5 id="minTypes">
+            <input type="range" max=5 value=0 id="minTypes">
           </td>
           <td rowspan=2>
             <label for="raceClass">Use Race/Class</label><br>
@@ -49,7 +49,7 @@
             <label for="maxTypes">Max</label>
           </td>
           <td>
-            <input type="range" max=5 id="maxTypes">
+            <input type="range" max=5 value=5 id="maxTypes">
           </td>
         </tr>
       
@@ -62,7 +62,7 @@
             <label for="minPow">Min</label>
           </td>
           <td>
-            <input type="range" max=20 id="minPow"><br>
+            <input type="range" max=20 value=0 id="minPow">
           </td>
         </tr>
         <tr>
@@ -70,7 +70,7 @@
             <label for="maxPow">Max</label>
           </td>
           <td>
-            <input type="range" max=20 id="maxPow"><br><br>
+            <input type="range" max=20 value=20 id="maxPow">
           </td>
         </tr>
         
@@ -83,7 +83,7 @@
             <label for="minTough">Min</label>
           </td>
           <td>
-            <input type="range" max=20 id="minTough">
+            <input type="range" max=20 value=0 id="minTough">
           </td>
           <td rowspan=2>
             <label for="useRarity">Rarity</label><br>
@@ -95,7 +95,7 @@
             <label for="maxTough">Max</label>
           </td>
           <td>
-            <input type="range" max=20 id="maxTough">
+            <input type="range" max=20 value=20 id="maxTough">
           </td>
         </tr>
         <tr>
