--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>Design Randomiser</title>
+    <style>
+      form {align:center, width:500px}
+      td {padding:10px}
+    </style>
   </head>
   <body>
     <form>
