--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Design Randomiser</title>
     <style>
-      form {align:center, width:500px}
+      form {x:200px;color:darkpurple}
       td {padding:10px}
     </style>
   </head>
