--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Design Randomiser</title>
     <style>
-      form {x:200px;color:darkpurple}
+      table {background-color:darkpurple;border-color:white}
       td {padding:10px}
     </style>
   </head>
