--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Design Randomiser</title>
     <style>
       body {
-        background-color:darkpurple;
+        background-color:#444400;
       }
       
       table {
@@ -24,6 +24,11 @@
   <body>
     <form>
       <table align="center" top=200px>
+        <tr>
+          <td colspan=4>
+            <h1>Custom Magic Card Design Randomiser</h1>
+          </td>
+        </tr>
         <tr>
           <td rowspan=2>
             <label for="useColors">Color</label><br>
