--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <title>Design Randomiser</title>
     <style>
       body {
-        background-color:#444400;
+        background-color:#440044;
       }
       
       table {
+        border-style:double;
+        border-width:thick;
         border-color:white;
         color:white;
       }
