--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script>
       function minColorChange(val) {
         document.getElementById('minColorCurrent').innerHTML = val;
+        document.title = "I did a thing."
       }
     </script>
   </head>
