--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <label for="minColors">Min</label>
           </td>
           <td>
-            <input type="range" max=5 value=0 id="minColors" name="minColors" oninput="minColorChange(this.value)>
+            <input type="range" max=5 value=0 id="minColors" name="minColors" oninput="minColorChange(this.value)">
             <label for="minColors" id="minColorCurrent">0</label>
           </td>
         </tr>
