--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Design Randomiser</title>
+    <title>Design Randomiser v0.1</title>
     
     <style>
       body {
