--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Design Randomiser v0.6</title>
+    <title>Design Randomiser v0.7</title>
     
     <style>
       body {
@@ -29,7 +29,7 @@
     <script>
       function sliderVal(name,val) {
         var targetName = name+"Current";
-        document.getElementById(targetName).innerHTML = val;
+        document.getElementById(targetName).innerText = val;
       }
       
       function enableSliders(name) {
@@ -58,7 +58,7 @@
         <tr>
           <td rowspan=2>
             <label for="useColors">Color</label><br>
-            <input type="checkbox" class="check" id="useColors" name="useColors" onchange="enableSliders(this.name)">
+            <input type="checkbox" class="check" id="useColors" name="useColors" onchange="enableSliders(this.name)" onclick="enableSliders(this.name)">
           </td>
           <td>
             <label for="minColors">Min</label>
