--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <label for="maxTough" id="maxToughCurrent">(20)</label>
           </td>
           <td>
-            <input type="range" class="useTough" min=0 max=20 value=20 id="maxTough" oninput="maxSlider(this.id,this.value,'minTough)">
+            <input type="range" class="useTough" min=0 max=20 value=20 id="maxTough" oninput="maxSlider(this.id,this.value,'minTough')">
           </td>
         </tr>
         <tr>
