--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         sliderVal(name,val);
         if(document.getElementById(name).value > document.getElementById(pair).value){
           println(name+": "+document.getElementById(name).value);
-          println(pair+": "+document.getElementById(pair).value;
+          println(pair+": "+document.getElementById(pair).value);
           document.getElementById(pair).value = val;
           sliderVal(pair,val);
         }
@@ -53,7 +53,7 @@
         sliderVal(name,val);
         if(document.getElementById(name).value < document.getElementById(pair).value){          
           println(name+": "+document.getElementById(name).value);
-          println(pair+": "+document.getElementById(pair).value;
+          println(pair+": "+document.getElementById(pair).value);
           document.getElementById(pair).value = val;
           sliderVal(pair, val);
         }
