--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         println(name+": "+document.getElementById(name).value);
         println(pair+": "+document.getElementById(pair).value);
         if(document.getElementById(name).value > document.getElementById(pair).value){
-          println("Ding! It should move now.")
+          println("Ding! It should move now.");
           document.getElementById(pair).value = val;
-          println(pair+"'s new value is: "+document.getElementById(pair).value)
+          println(pair+"'s new value is: "+document.getElementById(pair).value);
           sliderVal(pair,val);
         }
       }
@@ -55,9 +55,9 @@
         println(name+": "+document.getElementById(name).value);
         println(pair+": "+document.getElementById(pair).value);
         if(document.getElementById(name).value < document.getElementById(pair).value){
-          println("Ding! It should move now."
+          println("Ding! It should move now.");
           document.getElementById(pair).value = val;
-          println(pair+"'s new value is: "+document.getElementById(pair).value)
+          println(pair+"'s new value is: "+document.getElementById(pair).value);
           sliderVal(pair, val);
         }
       }
