--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       td {
         border-style: single;
         border-color: silver;
-        border-width: 1px;
+        border-width: thick;
         margin: 10px;
       }
       
