--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       }
       
       td {
-        border-style: single;
-        border-color: silver;
+        border-style: solid;
+        border-color: #dddddd;
         border-width: thick;
         margin: 10px;
       }
