--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         }
       }
       
-      function randomise{
+      function randomise(){
         var idea = "Design a";
         var isRare = document.getElementById("useRarity").checked;
         var isColors = document.getElementById("useColors").checked;
