--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         //var isOther = document.getElementById("useOtherTypes").checked;
         
         if(isRare){
-          idea += RARITIES[Math.floor(Math.random() * RARITIES.length)];
+          idea += RARITIES[Math.floor(Math.random() * RARITIES.length)] + " creature";
         }
         if(isColors){
           isTypes ? idea += ". It's a" : idea += ". It's";
