--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         if(document.getElementById("useTough").checked){
         
         }
-        document.getElementById('suggestion').innerText = idea;
+        document.getElementById('suggestion').innerText = idea + ".";
       }
       
       //"Design a(n) [RARITY] creature(. It's a) [COLORS] [TYPES] (with) (power) (and) (toughness) [POWER](/)[TOUGHNESS].
