--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           if(!isColors){
             idea += ". It's a";
             for(i=0;i<5;i++){
-              if(typeList[0].startsWith(VOWELS[i]) idea += "n";
+              if(typeList[0].startsWith(VOWELS[i])) idea += "n";
             }
           }
           for(i=0;i<typeList.length;i++){
