--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
         <tr>
           <td>
             <label for="maxTypes">Max</label>
-            <label for="maxTypes" id="maxTypesCurrent">(5)</label>
+            <label for="maxTypes" id="maxTypesCurrent">(4)</label>
             <input type="range" class="useTypes" min=1 max=4 value=4 id="maxTypes" oninput="maxSlider(this.id,this.value,'minTypes')">
           </td>
         </tr>
@@ -560,7 +560,7 @@
         </tr>
         <tr class="bigrow">
           <td colspan=4>
-            <label id="suggestion"></label>
+            <label id="suggestion" class="header"></label>
           </td>
       </tr>
     </table>
