--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
           if(!isColors){
             idea += ". It's a";
             for(i=0;i<5;i++){
+              console.log(typeList[0]);
               if(typeList[0].startsWith(VOWELS[i])) idea += "n";
             }
           }
