--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Design Randomiser v1.01</title>
+    <title>Design Randomiser v1.02</title>
     
     <style>
       body {
@@ -163,8 +163,8 @@
           if(!isColors){
             idea += ". It's a";
             for(i=0;i<5;i++){
-              console.log(typeList[0]);
-              if(typeList[0].startsWith(VOWELS[i])) idea += "n";
+              console.log(typeList[0].toString());
+              if(typeList[0].toString().startsWith(VOWELS[i])) idea += "n";
             }
           }
           for(i=0;i<typeList.length;i++){
